add authorization info to swagger
